--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           path: cypress-screenshots
       -uses: actions/upload-artifact@v3
         if: always()
+        with:
           name: cypress-videos
           path: cypress-videos
 
